fix the StudentMapper and TeacherMapper